--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     ]
   },
   "engines": {
-    "node": ">=16.x",
+    "node": "16.x || 18.x",
     "npm": ">=7.0.0",
     "yarn": ">=1.19.0 < 2.0.0"
   },
